--- a/reciclamais/src/main/resources/static/css/styleEscolhaMaterial.css
+++ b/reciclamais/src/main/resources/static/css/styleEscolhaMaterial.css
@@ -16,6 +16,14 @@ main #posicoes-materiais .itens-materiais{
 	
 }
 
+main #posicoes-materiais .itens-materiais:hover{
+	
+	border: 2px solid;
+	box-shadow: #000000;
+	
+	
+}
+
 main #posicoes-materiais .itens-materiais a{
 	width:100%;
 	height: 100%;
