--- a/reciclamais/src/main/resources/static/css/style.css
+++ b/reciclamais/src/main/resources/static/css/style.css
@@ -8,9 +8,7 @@ html,body{
   -webkit-font-smoothing: antialiased;
 }
 
-body{
-  
-}
+
 
 .container{
 	position: center;
@@ -40,6 +38,20 @@ body{
 	width: 33%;
 	border-left: 1px solid;
 	place-items: center;
+	border: 1px solid black;
+	box-shadow: #000000;
+}
+
+.itens:hover{
+	background-color: #109C23 ;
+	
+}
+
+.itens a{
+	text-decoration: none;
+	color: white;
+	width:100%;
+	text-align: center;
 }
 
 #itens-ini{
@@ -56,6 +68,9 @@ main {
 	margin-bottom: 0.5%;
 	background-color: #0AA41F;
 	border-radius: 5px 5px 5px 5px;
+	border: 1px solid black;
+	box-shadow: #000000;
+	min-height: 500px;
 	
 }
 main .titulo-pagina{
@@ -74,6 +89,8 @@ footer{
 	background-color: #047113;
 	color: white;
 	height: 100px;
+	border: 1px solid black;
+	box-shadow: #000000;
 }
 
 
