--- a/reciclamais/src/main/resources/static/css/styleMenuProdutos.css
+++ b/reciclamais/src/main/resources/static/css/styleMenuProdutos.css
@@ -20,6 +20,12 @@ main #posicoes-materiais .itens-materiais{
 	
 }
 
+main #posicoes-materiais .itens-materiais:hover{
+	border: 2px solid;
+	box-shadow: #000000;
+	
+}
+
 main #posicoes-materiais .itens-materiais .organizacao-produtos{
 	display:grid;
 	place-items: center;
@@ -33,5 +39,49 @@ main #posicoes-materiais .itens-materiais .organizacao-produtos{
 main #posicoes-materiais .itens-materiais .organizacao-produtos img{
 	width: 90%;
 	height: 90%;
+	
+}
+
+.retrocederPagina {
+	display: grid;
+	place-items: left;
+	margin-top: 1.5%;
+	margin-left: 4%;
+}
+
+.retrocederPagina a {
+	text-decoration: none;
+	color: white;
+}
+
+.barraPesquisa{
+	display:grid;
+	place-items: center;
+	text-align: center;
+	margin-left: 25%;
+	margin-right: 25%;
+	grid-template-columns: 80% 20%;
+	margin-top: 1.5%;
+	width:50%;
+}
+
+.barraPesquisa input{
+	width: 100%;
+	height: 30px;
+	border-right: 0px;
+	border: 0;
+	border-radius: 5px 0 0 5px;
+}
+
+.barraPesquisa button{
+	width:100%;
+	height: 30px;
+	border: 0;
+	background-color: white;
+	border-radius: 0 5px 5px 0;
+}
+
+.barraPesquisa button img{
+	width:50%;
 	
 }
