--- a/reciclamais/src/main/resources/templates/consultProduct.html
+++ b/reciclamais/src/main/resources/templates/consultProduct.html
@@ -20,15 +20,24 @@
 				</div>
 				<div class="navBar">
 					<ul>
-						<div class="itens" id="itens-ini"><li>Informações de Reciclagem</li></div>
-						<div class="itens"><li>Cadastrar produto</li></div>
-						<div class="itens" id="itens-fim"><li>Tabela de produtos cadastrados</li></div>
+						<div class="itens" id="itens-ini"><a th:href="@{/product/}"><li>Informações de Reciclagem</li></a></div>
+						<div class="itens"><a th:href="@{/product/registerProduct}"><li>Cadastrar produto</li></a></div>
+						<div class="itens" id="itens-fim"><a th:href="@{/product/table}"><li>Tabela de produtos cadastrados</li></a></div>
 					</ul>
 				</div>
 			</header>
 			<main>
 				<div class="titulo-pagina">
 					<h1>ESCOLHA O PRODUTO</h1>
+				</div>
+				
+				<div class="retrocederPagina">
+					<a th:href="@{/product/}">Material</a>
+				</div>
+				
+				<div class="barraPesquisa">
+					<input type="search" name="q" placeholder="Escreva o nome do produto">
+					<button><img th:src="@{/images/lupa.png}" width="20" height="20" /></button>
 				</div>
 				<div id="posicoes-materiais" th:switch="${products}">
 					<div class="itens-materiais" th:each="product : ${products}">
