--- a/reciclamais/src/main/resources/templates/escolhaMaterial.html
+++ b/reciclamais/src/main/resources/templates/escolhaMaterial.html
@@ -8,13 +8,13 @@
 		<div class="container">
 			<header>
 				<div>
-					<img th:src="@{/images/logo.png}" width="100" height="100" />
+					<img th:src="@{/images/logo.png}" width="100" height="100"  />
 				</div>
 				<div class="navBar">
 					<ul>
-						<div class="itens" id="itens-ini"><li>Informações de Reciclagem</li></div>
-						<div class="itens"><li>Cadastrar produto</li></div>
-						<div class="itens" id="itens-fim"><li>Tabela de produtos cadastrados</li></div>
+						<div class="itens" id="itens-ini"><a th:href="@{/product/}"><li>Informações de Reciclagem</li></a></div>
+						<div class="itens"><a th:href="@{/product/registerProduct}"><li>Cadastrar produto</li></a></div>
+						<div class="itens" id="itens-fim"><a th:href="@{/product/table}"><li>Tabela de produtos cadastrados</li></a></div>
 					</ul>
 				</div>
 			</header>
