--- a/reciclamais/src/main/resources/templates/registerProduct.html
+++ b/reciclamais/src/main/resources/templates/registerProduct.html
@@ -24,9 +24,9 @@
 				</div>
 				<div class="navBar">
 					<ul>
-						<div class="itens" id="itens-ini"><li>Informações de Reciclagem</li></div>
-						<div class="itens"><li>Cadastrar produto</li></div>
-						<div class="itens" id="itens-fim"><li>Tabela de produtos cadastrados</li></div>
+						<div class="itens" id="itens-ini"><a th:href="@{/product/}"><li>Informações de Reciclagem</li></a></div>
+						<div class="itens"><a th:href="@{/product/registerProduct}"><li>Cadastrar produto</li></a></div>
+						<div class="itens" id="itens-fim"><a th:href="@{/product/table}"><li>Tabela de produtos cadastrados</li></a></div>
 					</ul>
 				</div>
 			</header>
@@ -37,9 +37,11 @@
 				<div class="formulario">
 					<form action="#" th:action="@{/product/consultProduct}" th:object="${product}" method="post">
 						<label for="productName">Nome do produto*: </label>
-						<input type="text" th:field="*{name}" id="productName" name="productName" placeholder="ex: Lata de aluminio"/><br>
+						<input type="text" th:field="*{name}" id="productName" name="productName" placeholder="ex: Lata de aluminio"/>
+						<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="textdanger" > </span><br>
 						
 						<label for="productMaterial">Material*: </label><br>
+						<span th:if="${#fields.hasErrors('material')}" th:errors="*{material}" class="textdanger" > </span><br>
 						<div class="organisationMaterial">
 							<div>
 								<input type="radio" th:field="*{material}" id="materialMetal" name="materialMetal" value="Metal">
@@ -65,6 +67,7 @@
 						<input type="submit" value="Escolher imagem" id="confirmRegistration" class="styleButton" name="confirmRegistration"><br>
 							
 						<label for="productDescription">Descrição do produto*: </label><br>
+						<span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="textdanger" > </span><br>
 						<textarea th:field="*{description}" id="productDescription" name="productDescription" width="100px" height="60px" placeholder="Faça uma descrição, explicando o motivo do produto ser reciclável."/><br>
 						
 						<div class="bottonConfirm">
