--- a/reciclamais/src/main/resources/static/css/styleInfoProduct.css
+++ b/reciclamais/src/main/resources/static/css/styleInfoProduct.css
@@ -4,6 +4,7 @@ main #posicoes-carrossel{
 	margin-left: 15%;
 	margin-right: 15%;
 	place-items: center;
+	height: 200px;
 }
 
 main #posicoes-carrossel .itens-carossel{
@@ -14,9 +15,11 @@ main #posicoes-carrossel .itens-carossel{
 }
 
 main #posicoes-carrossel #imageCarrossel{
-	height: 200px;
+	height: 100%;
 	background-color: rgb(255, 255, 255);
-	width: 80%;
+	width: 95%;
+	box-shadow: #000000;
+	border: 1px solid black
 	
 }
 
@@ -42,7 +45,9 @@ main #posicoes-materiais itens-carossel img{
 }
 
 main #descricao-produto{
-	margin: 3%;
+	margin-top: 1%;
+	margin-left: 10%;
+	margin-right: 10%;
 	background-color: #058416;
 	border-radius: 5px;
 	
@@ -60,11 +65,18 @@ main #descricao-produto p{
 
 .retrocederPagina {
 	display: grid;
-	place-items: left;
+	grid-template-columns: 20% 80%;
+	place-items: center;
 	margin-top: 1.5%;
 	margin-left: 4%;
+	width: 25%;
+	height: 30px;
 }
 
+.retrocederPagina img {
+	width:100%;
+	height: 30px;
+}
 .retrocederPagina a {
 	text-decoration: none;
 	color: white;
