--- a/reciclamais/src/main/resources/static/css/styleMenuProdutos.css
+++ b/reciclamais/src/main/resources/static/css/styleMenuProdutos.css
@@ -44,9 +44,17 @@ main #posicoes-materiais .itens-materiais .organizacao-produtos img{
 
 .retrocederPagina {
 	display: grid;
-	place-items: left;
+	grid-template-columns: 20% 80%;
+	place-items: center;
 	margin-top: 1.5%;
 	margin-left: 4%;
+	width: 25%;
+	height: 30px;
+}
+
+.retrocederPagina img {
+	width:100%;
+	height: 30px;
 }
 
 .retrocederPagina a {
@@ -82,6 +90,7 @@ main #posicoes-materiais .itens-materiais .organizacao-produtos img{
 }
 
 .barraPesquisa button img{
-	width:50%;
+	width: 50%;
+	height: 100%;
 	
 }
