--- a/reciclamais/src/main/resources/templates/infoProduct.html
+++ b/reciclamais/src/main/resources/templates/infoProduct.html
@@ -25,12 +25,17 @@
 				</div>
 			</header>
 			<main>
+				<div class="botao-daltonico" onclick="mudar()">
+					<img th:src="@{/images/iconeDaltonico.png}"/>
+				</div>
+				
 				<div class="titulo-pagina" th:object="${product}">
 					<h1 th:text="${product.name}"></h1>
 				</div>
 				
 				<div class="retrocederPagina">
-					<a th:href="@{/product/}">Material</a>
+					<img th:src="@{/images/setaVoltar2.png}"  />
+					<a th:href="@{/product/}">Escolher material</a>
 				</div>
 				
 				<div id="posicoes-carrossel">
@@ -42,17 +47,19 @@
 				
 				<div id="descricao-produto">
 					<p th:text="${product.description}"></p>
-				</div>
+				</div><br><br>
+				
+				
 			</main>
 			
 			<footer>
 				<div class="rodape-left">
-					<p>Email: reclamais@hotmail.com </p>
+					<p>Email: reciclamais@hotmail.com </p>
 					<p>Telefone: 99999999-999999</p>
 				</div>
 				<div class="rodape-right">
 					<ul>
-						<li><a><img th:src="@{/images/logoInsta.png}" width="50" height="50" /> </a></li>
+						<li><a><img th:src="@{/images/logoInsta.png}" width="50" height="50"  /> </a></li>
 						<li><a><img th:src="@{/images/logoFace.png}" width="50" height="50" /> </a></li>
 						<li><a><img th:src="@{/images/logoTwitter.png}" width="50" height="50" /> </a></li>
 					</ul>
@@ -61,14 +68,55 @@
 		</div>
 		
 		<div vw class="enabled">
-    <div vw-access-button class="active"></div>
-    <div vw-plugin-wrapper>
-      <div class="vw-plugin-top-wrapper"></div>
-    </div>
-  </div>
-  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-  <script>
-    new window.VLibras.Widget('https://vlibras.gov.br/app');
-  </script>
+    		<div vw-access-button class="active"></div>
+    		<div vw-plugin-wrapper>
+      			<div class="vw-plugin-top-wrapper"></div>
+    		</div>
+ 		</div>
+ 		
+  		<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  		<script>
+    		new window.VLibras.Widget('https://vlibras.gov.br/app');
+  		</script>
+  		<script>
+  			var color = document.getElementsByClassName('itens')
+  			var rodape = document.getElementsByTagName('footer')
+  			var main = document.getElementsByTagName('main')
+  			var descricao = document.getElementById('descricao-produto')
+  			var daltonico = false
+  			function mudar(){
+	
+				if(daltonico == false){
+					daltonico = true
+				}
+				
+				else{
+					daltonico = false
+				}
+				
+				if(daltonico == true){
+					
+					for(i = 0; i < color.length; i++){
+						color[i].style.backgroundColor = "#043371"
+				
+					}
+					
+					rodape[0].style.backgroundColor = "#043371"
+					main[0].style.backgroundColor = "#0A6CA4"
+					descricao.style.backgroundColor = "#052B84"
+				}
+				
+				else{
+					
+					window.location.reload();
+				}
+				
+			}
+			
+			
+			
+			
+  		</script>
+  		
 	</body>
 </html>
