--- a/reciclamais/src/main/resources/templates/registerProduct.html
+++ b/reciclamais/src/main/resources/templates/registerProduct.html
@@ -3,20 +3,9 @@
 	<head>
 		<link rel="stylesheet" th:href="@{/css/style.css}" />
 		<link rel="stylesheet" th:href="@{/css/styleRegisterProduct.css}" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<!--<form action="#" th:action="@{/product/consultProduct}" th:object="${product}" method="post">
-			<label for="productName">Nome do produto: </label>
-				<input type="text" th:field="*{name}" id="productName" name="productName" placeholder="Nome do produto"/>
-			
-			<label for="productMaterial">Material do produto: </label>
-				<input type="text" th:field="*{material}" id="productMaterial" name="productMaterial" placeholder="Material do produto"/>
-				
-			<label for="productDescription">Descrição do produto: </label>
-				<input type="text" th:field="*{description}" id="productDescription" name="productDescription" placeholder="Descrição do produto"/>
-				
-			<input type="submit" value="Confirmar cadastro"id="confirmRegistration" name="confirmRegistration">
-		</form> -->
 		<div class="container">
 			<header>
 				<div>
@@ -31,20 +20,27 @@
 				</div>
 			</header>
 			<main>
+				<div class="botao-daltonico" onclick="mudar()">
+					<img th:src="@{/images/iconeDaltonico.png}"/>
+				</div>
+				
 				<div class="titulo-pagina" th:object="${product}">
 					<h1>CADASTRAR PRODUTO</h1>
 				</div>
 				<div class="formulario">
 					<form action="#" th:action="@{/product/consultProduct}" th:object="${product}" method="post">
-						<label for="productName">Nome do produto*: </label>
-						<input type="text" th:field="*{name}" id="productName" name="productName" placeholder="ex: Lata de aluminio"/>
+					
 						<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="textdanger" > </span><br>
+						<label for="productName">Nome do produto*: </label>
+						<input type="text" th:field="*{name}" id="productName" class="verifValor" onblur="tempVerif()" name="productName" placeholder="ex: Lata de aluminio"/>
+						<br><br>
 						
-						<label for="productMaterial">Material*: </label><br>
+						
+						<label for="productMaterial">Material*: </label>
 						<span th:if="${#fields.hasErrors('material')}" th:errors="*{material}" class="textdanger" > </span><br>
 						<div class="organisationMaterial">
 							<div>
-								<input type="radio" th:field="*{material}" id="materialMetal" name="materialMetal" value="Metal">
+								<input type="radio" th:field="*{material}" id="materialMetal"  name="materialMetal" value="Metal">
 								<label for="materialMetal">Metal</label> 
 							</div>
 							
@@ -54,25 +50,26 @@
 							</div>
 							
 							<div>
-								<input type="radio" th:field="*{material}" id="materialPapel" name="materialPapel" value="Papel">
+								<input type="radio" th:field="*{material}" id="materialPapel"  name="materialPapel" value="Papel">
 								<label for="materialPapel">Papel</label> 
 							</div>
 							
 							<div>
-								<input type="radio" th:field="*{material}" id="materialPlastico" name="materialPlastico" value="Plastico">
+								<input type="radio" th:field="*{material}" id="materialPlastico"  name="materialPlastico" value="Plastico">
 								<label for="materialPlastico">Plastico</label> 
 							</div>
-						</div><br>
-						
-						<input type="submit" value="Escolher imagem" id="confirmRegistration" class="styleButton" name="confirmRegistration"><br>
-							
-						<label for="productDescription">Descrição do produto*: </label><br>
-						<span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="textdanger" > </span><br>
-						<textarea th:field="*{description}" id="productDescription" name="productDescription" width="100px" height="60px" placeholder="Faça uma descrição, explicando o motivo do produto ser reciclável."/><br>
+						</div>
+						<br>
+						<input type="submit" value="Escolher imagem" id="confirmRegistration" class="styleButton" name="confirmRegistration">
+						<br><br>	
+						<label for="productDescription">Descrição do produto*: </label>
+						<span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"  class="textdanger" > </span>
+						<textarea th:field="*{description}" id="productDescription" name="productDescription" onblur="tempVerif()" class="verifValor" width="100px" height="60px" placeholder="Faça uma descrição, explicando o motivo do produto ser reciclável."/>
+						<br><br>
 						
 						<div class="bottonConfirm">
-							<input type="submit" value="Confirmar cadastro" id="confirmRegistration" class="styleButton" name="confirmRegistration">
-						</div>	
+							<input type="submit" value="Confirmar cadastro" onclick="test()" id="confirmRegistration" class="styleButton" name="confirmRegistration">
+						</div><br><br>	
 						
 					</form>
 				</div>
@@ -81,7 +78,7 @@
 			
 			<footer>
 				<div class="rodape-left">
-					<p>Email: reclamais@hotmail.com </p>
+					<p>Email: reciclamais@hotmail.com </p>
 					<p>Telefone: 99999999-999999</p>
 				</div>
 				<div class="rodape-right">
@@ -93,5 +90,104 @@
 				</div>
 			</footer>
 		</div>
+		
+		<div vw class="enabled">
+    		<div vw-access-button class="active"></div>
+    		<div vw-plugin-wrapper>
+      			<div class="vw-plugin-top-wrapper"></div>
+    		</div>
+ 		</div>
+ 		
+  		<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  		<script>
+    		new window.VLibras.Widget('https://vlibras.gov.br/app');
+  		</script>
+  		
+  		<script>
+  			var color = document.getElementsByClassName('itens')
+  			var botao = document.getElementsByClassName('styleButton')
+  			var rodape = document.getElementsByTagName('footer')
+  			var main = document.getElementsByTagName('main')
+  			var daltonico = false
+  			function mudar(){
+	
+				if(daltonico == false){
+					daltonico = true
+				}
+				
+				else{
+					daltonico = false
+				}
+				
+				if(daltonico == true){
+					
+					for(i = 0; i < color.length; i++){
+						color[i].style.backgroundColor = "#043371"
+						
+					}
+					
+					for(i = 0; i < botao.length; i++){
+						botao[i].style.backgroundColor = "#075E84"
+						
+					}
+					
+					rodape[0].style.backgroundColor = "#043371"
+					main[0].style.backgroundColor = "#0A6CA4"
+				}
+				
+				else{
+					
+					window.location.reload();
+				}
+				
+			}
+			
+  		</script>
+  		
+  		<script>
+  			var itens = document.getElementsByClassName('verifValor');
+  			var menssagem = document.getElementsByClassName('textdanger')
+  			var preenchido = false
+  			
+  			var conta = 0
+  			function verifica(){
+				for(i = 0; i < itens.length; i++){
+					if(itens[i].value == ""){
+						
+						 itens[i].style.border = '2px solid  rgb(252, 198, 10)'
+						 preenchido = false
+					}
+					
+				}
+				if(preenchido == true){
+					alert("Cadastro reallizado com sucesso")
+				}
+				
+			}
+			
+			function tempVerif(){
+				
+				for(i = 0; i < itens.length; i++){
+					if(itens[i].value != ""){
+						 itens[i].style.border = '0px'
+						
+						conta++
+					}
+					
+				}
+				
+				if(conta == itens.length){
+					preenchido = true;
+				}
+				
+			}
+			
+			function test(){
+				window.re
+			}
+			
+			
+  		</script>
+  		
 	</body>
 </html>
