--- a/reciclamais/src/main/resources/templates/consultProduct.html
+++ b/reciclamais/src/main/resources/templates/consultProduct.html
@@ -14,9 +14,9 @@
 				</div>
 				<div class="navBar">
 					<ul>
-						<div class="itens" id="itens-ini"><a th:href="@{/product/}"><li>Informações de Reciclagem</li></a></div>
-						<div class="itens"><a th:href="@{/product/registerProduct}"><li>Cadastrar produto</li></a></div>
-						<div class="itens" id="itens-fim"><a th:href="@{/product/table}"><li>Tabela de produtos cadastrados</li></a></div>
+						<div class="itens" onmouseover="entro(this)" onmouseout="saiu(this)" id="itens-ini"><a th:href="@{/product/}"><li>Informações de Reciclagem</li></a></div>
+						<div class="itens"  onmouseover="entro(this)" onmouseout="saiu(this)"><a th:href="@{/product/registerProduct}"><li>Cadastrar produto</li></a></div>
+						<div class="itens"  onmouseover="entro(this)" onmouseout="saiu(this)" id="itens-fim"><a th:href="@{/product/table}"><li>Tabela de produtos cadastrados</li></a></div>
 					</ul>
 				</div>
 			</header>
@@ -29,9 +29,9 @@
 					<h1>ESCOLHA O PRODUTO</h1>
 				</div>
 				
-				<div class="retrocederPagina">
+				<div class="retrocederPagina" onclick="voltar()">
 					<img th:src="@{/images/setaVoltar2.png}"  />
-					<a th:href="@{/product/}">Escolher material</a>
+					<h4>VOLTAR</h4>
 				</div>
 				
 				<div class="barraPesquisa">
@@ -110,6 +110,24 @@
 				else{
 					
 					window.location.reload();
+				}
+				
+			}
+			
+			function voltar(){
+				window.history.back()
+			}
+			
+			function entro(obj){
+				if(daltonico == true){
+					obj.style.backgroundColor = "#10649C"
+				}
+				
+			}
+			
+			function saiu(obj){
+				if(daltonico == true){
+					obj.style.backgroundColor = "#043371"
 				}
 				
 			}
