--- a/reciclamais/src/main/resources/templates/escolhaMaterial.html
+++ b/reciclamais/src/main/resources/templates/escolhaMaterial.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" th:href="@{/css/style.css}" />
 		<link rel="stylesheet" th:href="@{/css/styleEscolhaMaterial.css}" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Escolha do material</title>
 	</head>
 	<body>
 		<div class="container">
