--- a/reciclamais/src/main/resources/templates/infoProduct.html
+++ b/reciclamais/src/main/resources/templates/infoProduct.html
@@ -3,14 +3,12 @@
 	<head>
 		<link rel="stylesheet" th:href="@{/css/style.css}" />
 		<link rel="stylesheet" th:href="@{/css/styleInfoProduct.css}" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Descrição do produto</title>
 	</head>
 	
 	<body>
-		<!--<div class="productInfo" th:object="${product}">
-			<h1 th:text="${product.name}"></h1>
-			<img>
-			<p th:text="${product.description}"></p>
-		</div> -->
+		
 		<div class="container">
 			<header>
 				<div>
@@ -39,9 +37,9 @@
 				</div>
 				
 				<div id="posicoes-carrossel">
-					<div class="itens-carossel" onmouseover="entroSetaC(this)" onmouseout="saiuSetaC(this)" id="setaCarrossel1"><img th:src="@{/images/setaCarrossel.png}" width="100" height="100" /></div>
-					<div class="itens-carossel" id="imageCarrossel"><img th:src="@{/images/produtoGenerico.png}" width="100" height="100" alt="Produto" /></div>
-					<div class="itens-carossel" onmouseover="entroSetaC(this)" onmouseout="saiuSetaC(this)" id="setaCarrossel2"><img th:src="@{/images/setaCarrossel.png}" width="100" height="100" /></div>
+					<div class="itens-carossel" onmouseover="entroSetaC(this)" onmouseout="saiuSetaC(this)" onclick="mudaImgDi()" id="setaCarrossel1"><img th:src="@{/images/setaCarrossel.png}" width="100" height="100" /></div>
+					<div class="itens-carossel" id="imageCarrossel"><img th:src="@{/images/produtoGenerico1.png}"  width="100" height="100" alt="Produto" id="carrosselImg" /></div>
+					<div class="itens-carossel" onmouseover="entroSetaC(this)" onmouseout="saiuSetaC(this)" onclick="mudaImgEs()" id="setaCarrossel2"><img th:src="@{/images/setaCarrossel.png}" width="100" height="100" /></div>
 					
 				</div>
 				
@@ -84,6 +82,9 @@
   			var main = document.getElementsByTagName('main')
   			var descricao = document.getElementById('descricao-produto')
   			var daltonico = false
+  			var posImg = 0
+  			var img = document.getElementById('carrosselImg')
+  			var indice = 1
   			function mudar(){
 	
 				if(daltonico == false){
@@ -145,6 +146,30 @@
 				}
 				
 			}
+			
+			function mudaImgEs(){
+				
+				if(indice >= 3){
+					indice = 1
+				}
+				else {
+					indice++;
+				}
+				img.src = "/images/produtoGenerico"+indice+".png"
+			}
+			
+			function mudaImgDi(){
+				
+				if(indice <= 1){
+					indice = 3
+				}
+				else {
+					indice--;
+				}
+				img.src = "/images/produtoGenerico"+indice+".png"
+			}
+			
+			
 			
   		</script>
   		
