--- a/reciclamais/src/main/resources/templates/registerProduct.html
+++ b/reciclamais/src/main/resources/templates/registerProduct.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" th:href="@{/css/style.css}" />
 		<link rel="stylesheet" th:href="@{/css/styleRegisterProduct.css}" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Cadastro de produto</title>
 	</head>
 	<body>
 		<div class="container">
