--- a/reciclamais/src/main/resources/templates/tableProduct.html
+++ b/reciclamais/src/main/resources/templates/tableProduct.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" th:href="@{/css/style.css}" />
 		<link rel="stylesheet" th:href="@{/css/styleTableProduct.css}" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Tabela de produtos cadastrados</title>
 	</head>
 	
 	<body>
